# misis-parallel-computing

./: .gitignore
lab01/: CMakeLists.txt  Makefile  plot.py
lab01/include/: sieve.h  sieve.hpp  timing.h  timing.hpp
lab01/src/: main.c  main.cpp  sieve.c  sieve.cpp  timing.c  timing.cpp
lab02/: CMakeLists.txt
lab02/include/: blocked.hpp  buffered.hpp  classic.hpp  transpose.hpp  utils.hpp
lab02/src/: blocked.cpp  buffered.cpp  classic.cpp  main.cpp  transpose.cpp  utils.cpp
lab03/: CMakeLists.txt
lab03/include/: cpuid_info.hpp
lab03/src/: main.cpp
lab04/: CMakeLists.txt
lab04/include/: rand.hpp  randidx.hpp  seq.hpp  utils.hpp
lab04/src/: main.cpp  rand.cpp  randidx.cpp  seq.cpp  utils.cpp
lab05/: CMakeLists.txt
lab05/include/: plain.hpp  scalar.hpp  vec.hpp  vec512.hpp
lab05/src/: main.cpp  plain.cpp  scalar.cpp  vec.cpp  vec512.cpp
lab07/: CMakeLists.txt
lab07/include/: avx512.hpp  naive.hpp
lab07/src/: avx512.cpp  main.cpp  naive.cpp
